refactor: Update RBAC service to use RbacUserCredentials
- Replaced the `findUserByIdentifier` method with `loadUserCredentials` in `IRbacService` to streamline user authentication.
- Refactored `DataforgeBackendRbacService` to implement the new method, returning user credentials directly.
- Updated `RbacUserDetailsService` to utilize the new credentials structure, simplifying the user details loading process.
- Removed unused RBAC model classes and methods to clean up the codebase.